# subtitles-ai

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  START_HERE.md  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  nginx.conf  package-lock.json  package.json
backend/: .env.example  TESTS_FINAL_RESULTS.md  TESTS_SUMMARY.md  TEST_REPORT.md  app.py  celery_config.py  celery_worker.py  config.py  constraints.txt  download_video_task.py  logging_config.py  logo_manager.py  openai_rate_limiter.py  performance_monitor.py  phase_logger.py  pyproject.toml  pytest.ini  quality_gate.py  requirements-test.txt  requirements.txt  run_tests.py  shared_config.py  start.sh  startup_ready.py  state_manager.py  tasks_addition.py  ytdlp_hooks.py
backend/api/: editing_routes.py  health_routes.py  stats_routes.py  summary_routes.py  video_routes.py
backend/api/v1/: __init__.py  download_routes.py  helpers.py  status_routes.py  upload_routes.py  watermark_routes.py  youtube_routes.py
backend/core/: exceptions.py
backend/i18n/: __init__.py  translations.py
backend/services/: gemini_transcription.py  metadata_service.py  stats_service.py  subtitle_service.py  token_service.py  transcription_service.py  translation_services.py  url_resolver_service.py  video_processing_service.py  whisper_smart.py  youtube_service.py
backend/tasks/: __init__.py  cleanup_tasks.py  download_tasks.py  processing_tasks.py  progress_manager.py
backend/tests/: __init__.py  conftest.py
backend/tests/e2e/: README_ONLINE_VIDEO.md  README_OPENAI_E2E.md  conftest.py  test_3_file_upload.py  test_4_youtube_download.py  test_frontend_languages.py  test_online_video_workflows.py  test_openai_e2e.py  test_watermark_e2e.py  (+1 more)
backend/utils/: __init__.py  file_probe.py  file_utils.py  rtl_utils.py  video_utils.py
docs/: DAILY_LOG.md  (+34 more)
(+191 files in other folders)
