[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "substranslator-backend"
version = "0.1.0"
description = "SubsTranslator backend services"
requires-python = ">=3.12"
dependencies = [
    "Flask>=3.1.2",
    "Flask-CORS>=6.0.0",
    "faster-whisper>=1.2.0",
    "deep-translator>=1.11.4",
    "yt-dlp>=2025.8.11",
    "requests>=2.32.4",
    "python-dotenv>=1.1.1",
    "celery>=5.4.0",
    "redis>=5.2.1",
    "gunicorn>=23.0.0",
    "openai==1.35.13",
    "Werkzeug>=3.1.3",
    "google-api-python-client>=2.154.0",
    "ffmpeg-python>=0.2.0",
    "kombu>=5.4.2",
    "billiard>=4.2.1",
    "structlog>=24.4.0",
    "firebase-admin>=6.5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "unit: Fast unit tests with mocked dependencies",
    "integration: Service-level tests hitting real dependencies",
    "e2e: End-to-end tests (slow)",
    "slow: Tests that take longer to run",
    "youtube: Tests that require YouTube access",
    "openai: Tests that require OpenAI API key"
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
